feat: Login and Password inside the body + return token inside the body not in headers